--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,1 +1,5 @@
-<resources></resources>
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <dimen name="recycler_colum1">96dp</dimen>
+    <dimen name="recycler_colum2">140dp</dimen>
+</resources>
